# deprecated-kodem-cards-backend-rust

./: .firebaserc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  dev.sh  docker-compose.yml  firebase.json
dockerfiles/: firebase.Dockerfile
firebase/firestore-rules/: firestore.indexes.json  firestore.rules  firestore.rules.backup
migrations/: 20240315000000_init.sql  20240625000000_create_card_sets_table.sql
src/: main.rs
src/api/: card_sets.rs  mod.rs  routes.rs
src/config/: firebase.rs  mod.rs
src/domain/: mod.rs
src/domain/cards/: dto.rs  mod.rs  model.rs  repository.rs  service.rs
src/infrastructure/: database.rs
src/utils/: error.rs  extractors.rs  mod.rs  response.rs
